  and patch)
* New additions without breaking backward compatibility bumps the minor 
  (and resets the patch)
* Bug fixes and misc changes bumps the patch



reports 0.2.0
----------------------------------------------------------------

BUG FIXES

* `GQ`, `CA`, `LL` and `US` threw multiple warnings if a ligature was detected.
  This behavior has been corrected.

NEW FEATURES

* `new_report` and `presentation` utilize the slidify package to render the .Rmd 
  files associated with the presentation.

* `new_vignette` is a function that takes advantage of R (>= 3.0.0)'s inclusing
  of non-sweave vignettes.  This function utilizes knitr's capabilities to make 
  .Rnw and .Rmd vignettes (the reports Markdown/HTML vignette was created this 
  way).  Add additional vignettes to the vignettes directory with the 
  `append_vignette` function.

* `QC` quick convert between Pandoc recognized languages.  Meant for a string 
  rather than an entire file.

* `FT` a new function that detects face, color and size and generates a font tag 
  for supplied text.

* `YT` and `VM` are new functions that wraps a YouTube/Vimeo tag or url to 
  generate an HTML iframe tag.

* `IF` a new function that wraps a url to generate an HTML iframe tag.  This is 
  useful for embedding a document within another document.

* `IM`, `IM2` and `IW` new functions that wraps an image path or url to generate  
  a flexible HTML tag with optional hyperlink.  `IM2` is a wrapper for `IM` and 
  assumes the location of the local image file is in "assets/img/", meaning the 
  user only needs supply the name of the local image. `IW` allows for text 
  wrapping of an image.

* The cite family of functions has been introduced.  These functions provide 
  quick pulling of quotes with citations (in Markdown or LaTeX format).  See 
  `?citeL` for more details.

* Conversion functions: `md2docx`, `md2pdf`, `tex2html`, `html2pdf`, `tex2docx`, 