@@ -1746,3 +1746,79 @@
   url = {http://journal.r-project.org/archive/2011-2/RJournal_2011-2_Gesmann+de~Castillo.pdf},
   numeral = {1},
 }
+@Manual{Yihui20131,
+  title = {knitr: A general-purpose package for dynamic report generation in R},
+  author = {Yihui Xie},
+  year = {2013},
+  note = {R package version 1.2},
+  url = {http://yihui.name/knitr/},
+  numeral = {1},
+}
+@Book{Yihui20132,
+  title = {Dynamic Documents with {R} and knitr},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  year = {2013},
+  note = {ISBN 978-1482203530},
+  url = {http://yihui.name/knitr/},
+  numeral = {1},
+}
+@InCollection{Yihui20133,
+  booktitle = {Implementing Reproducible Computational Research},
+  editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
+  title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  year = {2013},
+  note = {ISBN 978-1466561595},
+  url = {http://www.crcpress.com/product/isbn/9781466561595},
+  numeral = {1},
+}
+@Manual{Boettiger2013,
+  title = {knitcitations: Citations for knitr markdown files},
+  author = {Carl Boettiger},
+  year = {2013},
+  note = {R package version 0.5-0},
+  url = {https://github.com/cboettig/knitcitations},
+  numeral = {1},
+}
+@Manual{Vaidyanathan2012,
+  title = {slidify: Generate reproducible html5 slides from R markdown},
+  author = {Ramnath Vaidyanathan},
+  year = {2012},
+  note = {R package version 0.3.52},
+  url = {http://ramnathv.github.com/slidify/},
+  numeral = {1},
+}
+@Manual{Rinker2013a,
+  title = {{qdap}: {Q}uantitative Discourse Analysis Package},
+  author = {Tyler W. Rinker},
+  organization = {University at Buffalo/SUNY},
+  address = {Buffalo, New York},
+  note = {version 1.0.0},
+  year = {2013},
+  url = {http://github.com/trinker/qdap},
+  numeral = {1},
+}
+@Manual{Rinker2013b,
+  title = {{reports}: {P}ackage to asssist in report writing},
+  author = {Tyler W. Rinker},
+  organization = {University at Buffalo/SUNY},
+  address = {Buffalo, New York},
+  note = {version 0.1.3},
+  year = {2013},
+  url = {http://github.com/trinker/reports},
+  numeral = {1},
+}
+@Article{Gesmann2011,
+  title = {googleVis: Interface between R and the Google Visualisation API},
+  author = {Markus Gesmann and Diego de Castillo},
+  journal = {The R Journal},
+  year = {2011},
+  volume = {3},
+  number = {2},
+  pages = {40--44},
+  month = {December},
+  url = {http://journal.r-project.org/archive/2011-2/RJournal_2011-2_Gesmann+de~Castillo.pdf},
+  numeral = {1},
+}
