@@ -187,7 +187,7 @@ hljs.initHighlightingOnLoad();
 
 <h2>Tyler Rinker</h2>
 
-<p>The reports package (<a href="http://github.com/trinker/reports">Rinker, 2013</a> ) is designed to bring together the best R has to offer in report writing in an intuitive fashion. The user houses everything related to the writing process in one accessible location.  The reports package assists in writing reports and presentations by providing a frame work that brings together existing R, <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span>/.docx and Pandoc tools.  The package is designed to be used with <a href="http://www.rstudio.com/">RStudio</a>, <a href="http://miktex.org/">MikTex</a>/<a href="http://www.tug.org/texlive/">Tex Live</a>/<a href="http://www.libreoffice.org/">LibreOffice</a>, <a href="http://yihui.name/knitr/">knitr</a>, <a href="http://ramnathv.github.com/slidify/">slidify</a>, <a href="http://www.carlboettiger.info/2012/05/30/knitcitations.html">knitcitations</a>, <a href="http://johnmacfarlane.net/pandoc/">Pandoc</a> and <a href="https://github.com/rapporter/pander">pander</a>.  The user will want to download these free programs/packages to maximize the effectiveness of the reports package.</p>
+<p>The reports package (<a href="http://github.com/trinker/reports">Rinker, 2013</a>) is designed to bring together the best R has to offer in report writing in an intuitive fashion. The user houses everything related to the writing process in one accessible location.  The reports package assists in writing reports and presentations by providing a frame work that brings together existing R, <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span>/.docx and Pandoc tools.  The package is designed to be used with <a href="http://www.rstudio.com/">RStudio</a>, <a href="http://miktex.org/">MikTex</a>/<a href="http://www.tug.org/texlive/">Tex Live</a>/<a href="http://www.libreoffice.org/">LibreOffice</a>, <a href="http://yihui.name/knitr/">knitr</a>, <a href="http://ramnathv.github.com/slidify/">slidify</a>, <a href="http://www.carlboettiger.info/2012/05/30/knitcitations.html">knitcitations</a>, <a href="http://johnmacfarlane.net/pandoc/">Pandoc</a> and <a href="https://github.com/rapporter/pander">pander</a>.  The user will want to download these free programs/packages to maximize the effectiveness of the reports package.</p>
 
 <p>The reports package assumes the user has some familairity with the report writing programs/packages it depends on.  For a complete list of reports dependencies <a href="http://trinker.github.io/reports/dependencies" target="_blank">click here</a>
 .  This manual will not help the user to understand these dependencies as they have their own help documentation.  Many functions in the reports package are set with defaults that assume the user is utilizing <a href="http://www.rstudio.com/" target="_blank">RStudio</a>
@@ -419,7 +419,7 @@ setwd(WD)</code></pre>
 <p><strong>sync_all</strong> <a href="http://youtu.be/bhArI_dp4B8" target="_blank" style="text-decoration: none"><b><font size="5" color="#B22222">[YT]</font></b></a></p>
 
 <p>The <a href="http://trinker.github.io/reports_dev/sync.html" target="_blank">sync family of functions</a>
- are also useful for syncing files netween directories.  This is particularly useful with the figure files in the REPORT and PRESENTATION directories and/or the img directory used by slidify (<a href="http://ramnathv.github.com/slidify/">Vaidyanathan, 2012</a> ).  The base version in the family, <a href="http://trinker.github.io/reports_dev/sync.html" target="_blank"><code>sync</code></a>
+ are also useful for syncing files netween directories.  This is particularly useful with the figure files in the REPORT and PRESENTATION directories and/or the img directory used by slidify (<a href="http://ramnathv.github.com/slidify/">Vaidyanathan, 2012</a>).  The base version in the family, <a href="http://trinker.github.io/reports_dev/sync.html" target="_blank"><code>sync</code></a>
  is generic and syncs files between 2 directories.  The <a href="http://trinker.github.io/reports_dev/sync.html" target="_blank">sync_all</a>
  function is specifically designed to sync any files between the three image directories in a new_report/presentation directory.  </p>
 
@@ -507,17 +507,17 @@ The <a href="http://trinker.github.io/reports_dev/cite.html" target="_blank">cit
 \newcommand\poscite[1]{\citeauthor{#1}' (\citeyear{#1})}</code></pre>
 
 <p>The L and M correspond to <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span> or markdown outputs; markdown relies on the <a href="https://github.com/cboettig/knitcitations" target="_blank">knitcitations</a>
- (<a href="https://github.com/cboettig/knitcitations">Boettiger, 2013</a> ) package.</p>
+ (<a href="https://github.com/cboettig/knitcitations">Boettiger, 2013</a>) package.</p>
 
 <p><font size="5" color="gold">&diams;</font> <strong>Example 1</strong> - <em>parenthesis cite</em> <font size="5" color="gold">&diams;</font></p>
 
 <pre><code class="r">parenciteM(1, force.block = FALSE)
 </code></pre>
 
-<pre><code>> "An **EXAMPLE**; feel "free" to *delete* it ***soon***" (<a href="http://github.com/trinker/qdap">Rinker, 2013b</a> , p. 12)</code></pre>
+<pre><code> "An **EXAMPLE**; feel "free" to *delete* it ***soon***" (<a href="http://github.com/trinker/qdap">Rinker, 2013b</a>, p. 12)</code></pre>
  
 
-<p>&ldquo;An <strong>EXAMPLE</strong>; feel &quot;free&rdquo; to <em>delete</em> it <strong><em>soon</em></strong>&ldquo; (<a href="http://github.com/trinker/qdap">Rinker, 2013b</a> , p. 12)</p>
+<p>&ldquo;An <strong>EXAMPLE</strong>; feel &quot;free&rdquo; to <em>delete</em> it <strong><em>soon</em></strong>&ldquo; (<a href="http://github.com/trinker/qdap">Rinker, 2013b</a>, p. 12)</p>
 
 <p><font size="5" color="gold">&diams;</font> <strong>Example 2</strong> - <em>textcite</em> <font size="5" color="gold">&diams;</font></p>
 
@@ -526,7 +526,7 @@ The <a href="http://trinker.github.io/reports_dev/cite.html" target="_blank">cit
 
 <pre><code>&#180;r  citet(x=bib[["Rinker2013a"]])&#180; "An **EXAMPLE**; feel "free" to *delete* it ***soon***"</code></pre>
 
-<p><a href="http://github.com/trinker/qdap">Rinker (2013)</a>  &quot;An <strong>EXAMPLE</strong>; feel &quot;free&rdquo; to <em>delete</em> it <strong><em>soon</em></strong>&ldquo;</p>
+<p><a href="http://github.com/trinker/qdap">Rinker (2013)</a> &quot;An <strong>EXAMPLE</strong>; feel &quot;free&rdquo; to <em>delete</em> it <strong><em>soon</em></strong>&ldquo;</p>
 
 <p>The <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span> (L) versions of the functions work in a similar fashion but are used in .Rnw documents.</p>
 
@@ -898,7 +898,7 @@ Wrap a url to generate an HTML iframe tag.</p>
      <iframe src="https://dl.dropboxusercontent.com/u/61803503/Slides/reports/index.html" width="1150" height="750">Your browser does not support iframes.</iframe>
 </div>
 
-<p><font size="5" color="gold">&diams;</font> <strong>Example 6</strong> <em>Here&#39;s an example of embedding a beautiful interactive visualization compliments of the googleVis package (<a href="http://journal.r-project.org/archive/2011-2/RJournal_2011-2_Gesmann+de~Castillo.pdf">Gesmann &amp; Castillo, 2011</a> )</em> <font size="5" color="gold">&diams;</font></p>
+<p><font size="5" color="gold">&diams;</font> <strong>Example 6</strong> <em>Here&#39;s an example of embedding a beautiful interactive visualization compliments of the googleVis package (<a href="http://journal.r-project.org/archive/2011-2/RJournal_2011-2_Gesmann+de~Castillo.pdf">Gesmann &amp; Castillo, 2011</a>)</em> <font size="5" color="gold">&diams;</font></p>
 
 <pre><code class="r">IF(&quot;https://dl.dropboxusercontent.com/u/61803503/presentations/tmp.html&quot;, width = 770, 
     height = 680, print = TRUE)
@@ -1332,7 +1332,7 @@ Convert R <code>colors()</code> to Hexadecimal.</p>
 <h2>Acknowledgements</h2>
 
 <p>The reports package is just a collection of the best R tools.  A special thanks to <a href="http://yihui.name/" target="_blank">Yihui</a>
- <a href="http://www.crcpress.com/product/isbn/9781466561595">Xie (2013)</a>  for his work with the <a href="http://yihui.name/knitr/" target="_blank">knitr package</a>
+ <a href="http://www.crcpress.com/product/isbn/9781466561595">Xie (2013)</a> for his work with the <a href="http://yihui.name/knitr/" target="_blank">knitr package</a>
  and <a href="http://people.mcgill.ca/ramnath.vaidyanathan/" target="_blank">Ramnath Vaidyanathan</a>
  for his <a href="http://slidify.org/" target="_blank">slidify package</a>
 .  These R packages are the core of the reports package.  For a complete list of reports dependencies <a href="http://trinker.github.io/reports/dependencies" target="_blank">click here</a>
